--- a/flex.css
+++ b/flex.css
@@ -1,3 +1,17 @@
-.flex{
-    display:flex;
+.flex-content{
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 50% 50%;
 }
+.left-content{
+    grid-column-start: 2;
+    grid-row-start: 2;
+    grid-row-end: 2;
+    grid-column-end: 2;
+}
+    /* justify-content: space-between;
+    align-items: center;
+}
+.left-content{
+    display: flex;
+} */
